# Node_Sensor

./: .gitignore  SYSTEM_GUIDE.md  resetCOM.ps1
Node_Sensor/: CMakeLists.txt
Node_Sensor/components/ES_PH_SOIL/: CMakeLists.txt
Node_Sensor/components/ES_SM_THEC/: CMakeLists.txt
Node_Sensor/components/LoRa_SX1278/: CMakeLists.txt
Node_Sensor/components/lora_task/: CMakeLists.txt
Node_Sensor/components/modbus_base/: CMakeLists.txt
Node_Sensor/main/: CMakeLists.txt  Node_Sensor.cpp
components/.backup/sensor_data/: CMakeLists.txt
components/.backup/sensor_tasks/: CMakeLists.txt
components/DS3231_RTC/: CMakeLists.txt  NTP_SYNC_GUIDE.md
components/DS3231_RTC/include/: DS3231_RTC.hpp
components/DS3231_RTC/src/: DS3231_RTC.cpp
components/ES35_SW/: CMakeLists.txt
components/ES35_SW/include/: ES35_SW.hpp
components/ES35_SW/src/: ES35_SW.cpp
components/ES_PH_SOIL/: CMakeLists.txt
components/ES_PH_SOIL/include/: ES_PH_SOIL.hpp
components/ES_PH_SOIL/src/: ES_PH_SOIL.cpp
components/ES_SM_THEC/: CMakeLists.txt
components/ES_SM_THEC/include/: ES_SM_THEC.hpp
components/ES_SM_THEC/src/: ES_SM_THEC.cpp
components/LoRa_E32_UART/: CMakeLists.txt
components/NPK/: CMakeLists.txt
components/NPK/include/: NPK.hpp
components/WiFiHelper/: CMakeLists.txt
components/modbus_base/: CMakeLists.txt
components/system_manager/: CMakeLists.txt
components/system_manager/include/: system_manager.hpp  system_states.hpp
components/system_manager/src/: system_manager.cpp
components/uart_shared/: CMakeLists.txt
main/: CMakeLists.txt  Node_Sensor.cpp
(+23 files in other folders)
